
[package]
name = "proton"
version = "0.1.0"
edition = "2021"

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.20.2"

[dependencies]
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
logos = "0.14"

